fix: highlight block spacing in <li>

--- a/themes/hugo-theme-codex/assets/scss/partials/_typography.scss
+++ b/themes/hugo-theme-codex/assets/scss/partials/_typography.scss
@@ -61,6 +61,11 @@ ol {
 
   li {
     line-height: $leading;
+
+    .highlight {
+      margin-top: calc(#{$leading} - 1rem);
+      margin-bottom: calc(#{$leading} - 1rem);
+    }
   }
 
   ul,
